--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.postgresql.datasource.driverClassName=org.postgresql.Driver
 
 #datasource 2
 datasources.mariadb.url=jdbc:mariadb://mariadb:3306/skunksdb
-datasources.mariadb.username=root
+datasources.mariadb.username=admin
 datasources.mariadb.password=1
 datasources.mariadb.configuration.maximum-pool-size=30
 spring.mariadb.datasource.driverClassName=org.mariadb.jdbc.Driver
